--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-
+    <color name="primary_orange">#EC651E</color>
+    <color name="secondary_blue">#4455AA</color>
+    <color name="gray">#5B5B5B</color>
+    <color name="light_gray">#BFBFBF</color>
     <color name="white">#FFFFFF</color>
 
     <color name="gray_21">#212121</color>
