--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -7,12 +7,11 @@
     android:layout_height="match_parent"
     >
 
-    <fragment
-        android:id="@+id/map"
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        tools:context="tw.com.louis383.coffeefinder.MapsActivity"
+        tools:background="#757575"
         />
 
     <android.support.design.widget.FloatingActionButton
