--- a/app/src/main/res/layout/coffee_list_item.xml
+++ b/app/src/main/res/layout/coffee_list_item.xml
@@ -1,11 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     >
 
+    <TextView
+        android:id="@+id/list_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toStartOf="@+id/list_bookmark_icon"
+        android:textSize="20sp"
+        android:textColor="@color/gray"
+        android:fontFamily="sans-serif"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:singleLine="true"
+        tools:text="小破爛 Café Junkies"
+        />
 
+    <ImageView
+        android:id="@id/list_bookmark_icon"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_alignBottom="@id/list_title"
+        android:layout_toStartOf="@+id/list_wifi_icon"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_bookmark"
+        tools:visibility="gone"
+        />
+    
+    <ImageView
+        android:id="@id/list_wifi_icon"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_alignBottom="@id/list_title"
+        android:layout_alignParentEnd="true"
+        app:srcCompat="@drawable/ic_wifi"
+        />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/list_chair_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="12dp"
+        android:layout_below="@id/list_title"
+        android:layout_alignStart="@id/list_title"
+        app:srcCompat="@drawable/ic_seat"
+        />
+
+    <TextView
+        android:id="@+id/list_chair_possibility"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_alignTop="@id/list_chair_icon"
+        android:layout_alignBottom="@id/list_chair_icon"
+        android:layout_toEndOf="@id/list_chair_icon"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textColor="@color/gray"
+        android:textSize="14sp"
+        tools:text="3.5"
+        />
+    
+    <TextView
+        android:id="@+id/list_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/list_chair_icon"
+        android:layout_alignBottom="@id/list_chair_icon"
+        android:layout_toEndOf="@id/list_chair_icon"
+        android:gravity="center"
+        android:layout_marginStart="56dp"
+        android:textColor="@color/gray"
+        android:textStyle="bold"
+        android:textSize="14sp"
+        tools:text="200公尺"
+        />
+
+    <android.support.v7.widget.AppCompatRatingBar
+        android:id="@+id/list_chart_money"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@id/list_chair_icon"
+        android:layout_alignBottom="@id/list_chair_icon"
+        android:max="5"
+        android:stepSize="1"
+        android:isIndicator="true"
+        style="?android:attr/ratingBarStyleSmall"
+        />
+
+</RelativeLayout>
