--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recyclerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clipToPadding="false"
-    android:clipChildren="false"
-    android:scrollbarStyle="outsideOverlay"
-    app:layoutManager="LinearLayoutManager"
-    tools:listitem="@layout/coffee_list_item"
-/>
+    android:orientation="vertical"
+    >
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="?android:actionBarSize"
+        android:visibility="invisible"
+        />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="?android:actionBarSize"
+        android:visibility="invisible"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:clipChildren="false"
+        android:scrollbarStyle="outsideOverlay"
+        app:layoutManager="LinearLayoutManager"
+        tools:listitem="@layout/coffee_list_item"
+        />
+
+</LinearLayout>
