--- a/app/src/main/res/values/styles_components.xml
+++ b/app/src/main/res/values/styles_components.xml
@@ -39,4 +39,10 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="ExpenseRateBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/cheap_bar_ratingbar</item>
+        <item name="android:minHeight">16dp</item>
+        <item name="android:maxHeight">16dp</item>
+    </style>
+
 </resources>
