--- a/app/src/main/res/values/styles_components.xml
+++ b/app/src/main/res/values/styles_components.xml
@@ -45,4 +45,22 @@
         <item name="android:maxHeight">16dp</item>
     </style>
 
+    <style name="RateProgressBar" parent="@android:style/Widget.ProgressBar.Horizontal">
+        <item name="android:minHeight">8dp</item>
+        <item name="android:minWidth">200dp</item>
+        <item name="android:indeterminate">false</item>
+        <item name="android:max">100</item>
+        <item name="android:progressDrawable">@drawable/progress_rate_bar</item>
+    </style>
+
+    <style name="WhiteColorButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@color/gray</item>
+        <item name="colorButtonNormal">@color/white</item>
+    </style>
+
+    <style name="OrangeColorButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:textColor">@color/white</item>
+        <item name="colorButtonNormal">@color/primary_orange</item>
+    </style>
+
 </resources>
