--- a/app/src/main/res/drawable/progress_rate_bar.xml
+++ b/app/src/main/res/drawable/progress_rate_bar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <item android:id="@android:id/background">
-        <bitmap android:src="@drawable/ic_bar_chart_grayscale" android:tileMode="disabled" />
+        <bitmap android:src="@drawable/ic_chart_track" android:tileMode="disabled" />
     </item>
     <item android:id="@android:id/progress">
         <bitmap android:src="@drawable/ic_bar_chart" android:tileMode="disabled"/>
