--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -56,6 +56,7 @@
             android:layout_marginTop="26dp"
             android:layout_toEndOf="@id/left_margin"
             android:layout_below="@id/detail_view_title"
+            android:max="5"
             style="@style/ExpenseRateBar"
             />
 
@@ -218,7 +219,7 @@
                 android:id="@+id/detail_view_button_navigate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_direction_grey"
+                android:drawableStart="@drawable/ic_directions_grey"
                 android:text="@string/dialog_navigate"
                 android:theme="@style/WhiteColorButton"
                 />
@@ -230,6 +231,8 @@
                 android:drawableStart="@drawable/ic_bookmark_grey"
                 android:text="@string/add_to_bookmark"
                 android:theme="@style/WhiteColorButton"
+                android:visibility="gone"
+                tools:visibility="visible"
                 />
 
         </LinearLayout>
@@ -264,6 +267,7 @@
             />
 
         <Button
+            android:id="@+id/detail_view_button_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
@@ -328,7 +332,7 @@
             android:layout_alignTop="@id/detail_view_limited_time_icon"
             android:layout_alignBottom="@id/detail_view_limited_time_icon"
             android:gravity="center_vertical"
-            android:textSize="12sp"
+            android:textSize="16sp"
             android:fontFamily="sans-serif"
             android:maxLines="1"
             android:ellipsize="end"
@@ -340,7 +344,7 @@
             android:id="@+id/detail_view_socket_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="18dp"
             android:layout_below="@id/detail_view_limited_time_icon"
             android:layout_alignStart="@id/detail_view_limited_time_icon"
             android:layout_alignEnd="@id/detail_view_limited_time_icon"
@@ -356,7 +360,7 @@
             android:layout_alignTop="@id/detail_view_socket_icon"
             android:layout_alignBottom="@id/detail_view_socket_icon"
             android:gravity="center_vertical"
-            android:textSize="12sp"
+            android:textSize="16sp"
             android:fontFamily="sans-serif"
             android:maxLines="1"
             android:ellipsize="end"
@@ -384,7 +388,7 @@
             android:layout_alignTop="@id/detail_view_standing_desk_icon"
             android:layout_alignBottom="@id/detail_view_standing_desk_icon"
             android:gravity="center_vertical"
-            android:textSize="12sp"
+            android:textSize="16sp"
             android:fontFamily="sans-serif"
             android:maxLines="1"
             android:ellipsize="end"
@@ -421,9 +425,10 @@
             android:layout_toEndOf="@+id/coffeeshop_info_left_margin"
             android:layout_alignTop="@id/detail_view_opentime_icon"
             android:maxLines="2"
+            android:gravity="top"
             android:ellipsize="end"
-            android:textColor="#585858"
-            android:textSize="14sp"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
             tools:text="一~四07:30~20:00 五07:30~21:00 六日08:30~21:00"
             />
 
@@ -455,6 +460,7 @@
             android:paddingEnd="16dp"
             android:layout_toEndOf="@id/coffeeshop_info_left_margin"
             android:layout_alignTop="@id/detail_view_mrt_icon"
+            android:gravity="top"
             android:maxLines="2"
             android:ellipsize="end"
             android:textSize="16sp"
