--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,11 +4,12 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorAccent">@color/primary_orange</item>
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:alertDialogTheme">@style/LightDialogTheme</item>
         <item name="alertDialogTheme">@style/LightDialogTheme</item>
 
         <item name="android:textColorPrimary">@color/gray</item>
+
     </style>
 
     <!-- Dialog theme -->
