--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:id="@+id/main_rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     >
 
     <android.support.v4.view.ViewPager
@@ -40,6 +39,7 @@
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:actionBarSize"
+            app:layout_scrollFlags="snap"
             style="@style/Toolbar"
             />
 
@@ -48,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="?android:actionBarSize"
             android:background="@color/white"
+            app:layout_scrollFlags="snap"
             style="@style/TabBar"
             />
 
