list ripple effect.

--- a/app/src/main/res/layout/coffee_list_item.xml
+++ b/app/src/main/res/layout/coffee_list_item.xml
@@ -10,6 +10,7 @@
     android:paddingEnd="16dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
+    android:background="?selectableItemBackground"
     >
 
     <TextView
