boss and about layout. splash and add list empty picture. Update share message.

--- a/app/src/main/res/layout-v21/fragment_maps.xml
+++ b/app/src/main/res/layout-v21/fragment_maps.xml
@@ -24,6 +24,7 @@
         app:backgroundTint="@color/white"
         app:fabSize="normal"
         app:elevation="5dp"
+        app:pressedTranslationZ="11dp"
         />
 
 </FrameLayout>
