--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="gray_21">#212121</color>
     <color name="gray_75">#757575</color>
+    <color name="gray_f5">#F5F5F5</color>
 </resources>
