--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/primary_orange"
+        style="@style/OrangeToolbar"
         />
 
     <ScrollView
@@ -71,6 +72,7 @@
                 android:layout_below="@id/about_title"
                 android:layout_marginTop="8dp"
                 android:layout_centerHorizontal="true"
+                android:gravity="center"
                 android:textSize="14sp"
                 android:maxLines="2"
                 android:ellipsize="end"
