--- a/app/src/main/res/layout/activity_boss.xml
+++ b/app/src/main/res/layout/activity_boss.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/primary_orange"
+        style="@style/OrangeToolbar"
         />
 
     <ScrollView
@@ -51,6 +52,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/boss_talk"
                 android:layout_marginTop="29dp"
+                android:visibility="gone"
                 android:text="@string/boss_feed"
                 style="@style/OrangeColorButton"
                 />
