--- a/app/src/main/res/values/styles_components.xml
+++ b/app/src/main/res/values/styles_components.xml
@@ -39,6 +39,16 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="OrangeToolbar">
+        <item name="titleTextAppearance">@style/OrangeToolbarTitle</item>
+    </style>
+
+    <style name="OrangeToolbarTitle" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="ExpenseRateBar" parent="@android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/cheap_bar_ratingbar</item>
         <item name="android:minHeight">16dp</item>
