--- a/app/src/main/res/layout/activity_boss.xml
+++ b/app/src/main/res/layout/activity_boss.xml
@@ -69,6 +69,7 @@
                 />
 
             <ImageView
+                android:id="@+id/boss_twitter_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@id/boss_twitter"
