--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="gray_21">#212121</color>
     <color name="gray_75">#757575</color>
     <color name="gray_f5">#F5F5F5</color>
+
+    <!-- trophy -->
+    <color name="copper">#B87333</color>
 </resources>
