--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     android:layout_height="match_parent"
     >
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/main_viewpager"
+    <FrameLayout
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:background="#757575"
@@ -41,35 +41,14 @@
         android:id="@+id/main_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="6dp"
         app:layout_anchor="@id/main_bottom_sheet"
         app:layout_anchorGravity="end"
         app:fabSize="normal"
+        app:elevation="6dp"
+        app:pressedTranslationZ="12dp"
         app:useCompatPadding="true"
         app:srcCompat="@drawable/ic_direction"
         />
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/main_appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/main_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
-            app:layout_scrollFlags="snap"
-            style="@style/Toolbar"
-            />
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/main_tabbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
-            android:background="@color/white"
-            app:layout_scrollFlags="snap"
-            style="@style/TabBar"
-            />
-
-    </android.support.design.widget.AppBarLayout>
 </android.support.design.widget.CoordinatorLayout>
