--- a/app/src/main/res/values/styles_components.xml
+++ b/app/src/main/res/values/styles_components.xml
@@ -65,12 +65,14 @@
 
     <style name="WhiteColorButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textColor">@color/gray</item>
-        <item name="colorButtonNormal">@color/white</item>
+        <item name="android:colorButtonNormal">@color/white</item>
+        <item name="android:elevation">2dp</item>
     </style>
 
     <style name="OrangeColorButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:textColor">@color/white</item>
         <item name="colorButtonNormal">@color/primary_orange</item>
+        <item name="android:elevation">2dp</item>
     </style>
 
 </resources>
