--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -14,17 +14,15 @@
         tools:background="#757575"
         />
 
-    <android.support.design.widget.FloatingActionButton
+    <android.support.v7.widget.AppCompatImageButton
         android:id="@+id/my_location_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_activity_margin_size"
-        android:layout_gravity="bottom|right|end"
-        app:srcCompat="@drawable/ic_mylocation"
-        app:backgroundTint="@color/white"
-        app:fabSize="normal"
-        app:elevation="5dp"
-        app:pressedTranslationZ="11dp"
+        android:layout_gravity="right|end"
+        android:background="@drawable/rectangle_material"
+        android:elevation="5dp"
+        android:src="@drawable/ic_mylocation"
         />
 
 </FrameLayout>
