--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,19 +23,15 @@
         android:background="@drawable/shadow_layer"
         />
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v4.view.ViewPager
         android:id="@+id/main_bottom_sheet"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
         app:behavior_peekHeight="170dp"
-        app:behavior_hideable="true"
-        >
-
-        <include layout="@layout/detail_info" />
-
-    </android.support.v4.widget.NestedScrollView>
+        app:behavior_hideable="false"
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/main_fab"
