--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primary_orange">#EC651E</color>
     <color name="secondary_blue">#4455AA</color>
     <color name="gray">#5B5B5B</color>
+    <color name="secondary_bluegray">#90A4AE</color>
     <color name="light_gray">#BFBFBF</color>
     <color name="white">#FFFFFF</color>
     <color name="gray_1e">#1E1E1E</color>
